--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-fastapi==0.110.0
-uvicorn==0.29.0
-scikit-learn==1.4.2
-pandas==2.2.2
-numpy==1.26.4
-joblib==1.4.2
-pydantic==2.7.1
+fastapi
+uvicorn
+jinja2
+scikit-learn
+pandas
+joblib
+numpy
+python-multipart
