--- a/.github/workflows/mlops-pipeline.yml
+++ b/.github/workflows/mlops-pipeline.yml
@@ -1,41 +1,35 @@
-name: MLOps Pipeline
+name: CI Pipeline for test-aja branch
 
 on:
   push:
     branches:
-      - main
-  pull_request:
+      - test-aja
 
 jobs:
-  build-and-test:
+  build:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
+      - name: Checkout repo
+        uses: actions/checkout@v3
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: "3.10"
+      - name: Setup Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.10"
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
-    - name: Run training pipeline
-      run: |
-        python train_model.py
+      - name: Run training script
+        run: python src/train_model.py
 
-    - name: Verify model artifacts
-      run: |
-        test -f models/price_range_model.pkl
-        test -f models/accuracy.txt
-        test -f models/meta.json
-
-    - name: Run basic FastAPI test with uvicorn
-      run: |
-        uvicorn main:app --host 0.0.0.0 --port 8000 --timeout-keep-alive 2 &
-        sleep 5
-        curl -f http://127.0.0.1:8000 || exit 1
+      - name: Commit and push model files
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git add models/
+          git commit -m "Add trained model files [skip ci]" || echo "No changes to commit"
+          git push origin test-aja
