--- a/.github/workflows/mlops-pipeline.yml
+++ b/.github/workflows/mlops-pipeline.yml
@@ -28,8 +28,8 @@ jobs:
 
       - name: Commit and push model files
         run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git config --global user.name "Viggofudail"
+          git config --global user.email "Viggofudail@gmail.com"
           git add models/
           git commit -m "Add trained model files [skip ci]" || echo "No changes to commit"
           git push origin test-aja
