--- a/.github/workflows/mlops-pipeline.yml
+++ b/.github/workflows/mlops-pipeline.yml
@@ -1,35 +1,45 @@
-name: CI Pipeline for test-aja branch
+name: MLOps Pipeline
 
 on:
   push:
-    branches:
-      - test-aja
+    branches: [test-aja]
+  pull_request:
+    branches: [test-aja]
 
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
 
+    env:
+      REPO_URL: https://github.com/Viggofudail/mlops-phone-price.git
+
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v3
+    - name: Checkout this repository
+      uses: actions/checkout@v3
 
-      - name: Setup Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.10"
+    - name: Clone private repo (mlops-phone-price)
+      env:
+        TOKEN: ${{ secrets.RAILWAY_SECRET }}
+      run: |
+        git clone https://${TOKEN}@github.com/Viggofudail/mlops-phone-price.git
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.10'
 
-      - name: Run training script
-        run: python src/train_model.py
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
 
-      - name: Commit and push model files
-        run: |
-          git config --global user.name "Viggofudail"
-          git config --global user.email "Viggofudail@gmail.com"
-          git add models/
-          git commit -m "Add trained model files [skip ci]" || echo "No changes to commit"
-          git push origin test-aja
+    - name: Train model
+      run: python train_model.py
+
+    - name: Run FastAPI with Uvicorn (for test)
+      run: |
+        nohup uvicorn main:app --host 0.0.0.0 --port 8000 &
+        sleep 10
+        curl -f http://localhost:8000 || exit 1
+
+    # Opsional: Deploy step here
