--- a/.github/workflows/mlops-pipeline.yml
+++ b/.github/workflows/mlops-pipeline.yml
@@ -36,5 +36,5 @@ jobs:
           git config --global user.email "Viggofudail@gmail.com"
           git remote set-url origin https://${GH_TOKEN}@github.com/Viggofudail/mlops-phone-price.git
           git add models/
-          git commit -m "Add trained model files [skip ci]" || echo "No changes to commit"
+          git commit -m "UPDATE" || echo "No changes to commit"
           git push origin test-aja
